Update img path

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
 
-   <img class="bgpattern-top" src="/images/bg-pattern-top.svg" alt="">
-   <img class="bgpattern-bot" src="/images/bg-pattern-bottom.svg" alt="">
+   <img class="bgpattern-top" src="images/bg-pattern-top.svg" alt="">
+   <img class="bgpattern-bot" src="images/bg-pattern-bottom.svg" alt="">
     
   <div class="card">
     <div class="bgtop-card"></div>
